# interchannel_message_mover

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.sh
.github/: FUNDING.yml
src/: cache.rs  commands.rs  events.rs  interaction.rs  main.rs  message.rs  webhooks.rs
src/commands/: move.rs  move_last_messages.rs
src/interaction/: channel_select_menu.rs  message_command.rs  move_channel_select.rs  move_message.rs  move_message_and_below.rs
