[package]
name = "discord-interchannel-message-mover"
description = "a simple discord bot to move messages between channels"
repository = "https://github.com/laralove143/discord-interchannel-message-mover"
keywords = ["bot", "discord"]
categories = ["web-programming::http-client", "web-programming::http-server"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3", default-features = false }
twilight-gateway = { version = "0.11", default-features = false, features = [
    "rustls-native-roots",
    "zlib-simd",
] }
twilight-http = { version = "0.11", default-features = false, features = [
    "decompression",
    "rustls-native-roots",
    "trust-dns",
] }
twilight-util = { version = "0.11", features = ["builder"] }
twilight-cache-inmemory = { version = "0.11", features = [
    "permission-calculator",
] }
twilight-standby = { version = "0.11", default-features = false }
twilight-mention = "0.11"
twilight-model = "0.11"
twilight-interactions = "0.11"
dashmap = "5.1"
anyhow = { git = "https://github.com/laralove143/anyhow" }
