[package]
name = "interchannel_message_mover"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sparkle-convenience = "0.15"
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model = "0.15"
twilight-standby = "0.15"
twilight-util = { version = "0.15", features = ["builder", "permission-calculator"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
dotenvy = "0.15"
